# dbt-flink-adapter

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  DBT_ADAPTER_ECOSYSTEM_COMPARISON.md  README.md  dev-requirements.txt  pytest.ini  setup.py  test_dbt_e2e.py  test_dbt_sql_generation.py  test_streaming.py  tox.ini  ververica-api.yaml  vvcapi-1.json
adapter/: pyproject.toml
dbt-flink-ververica/: .gitignore  API_SPEC_COMPARISON.md  CODE_IMPROVEMENTS.md  PHASE_1_COMPLETE.md  PHASE_1_WEEK_1_SUMMARY.md  QUICK_START.md  README.md  SDK_GENERATION_REPORT.md  TESTING_SUMMARY.md  dbt-flink-ververica.toml.example  pyproject.toml
dbt-flink-ververica/src/dbt_flink_ververica/: __init__.py  auth.py  client.py  config.py  local_deployer.py  main.py  sql_processor.py
dbt-flink-ververica/tests/: test_additional_deps.py  test_auth.py  test_cli_commands.py  test_config_loading.py  test_drop_pattern.py  test_local_deployer.py
dbt-flink-ververica/ververica-platform-api-client/: README.md
dbt-flink-ververica/ververica-platform-api-client/ververica_platform_api_client/: __init__.py
dbt-flink-ververica/ververica-platform-api-client/ververica_platform_api_client/api/alerts/: list_deployment_events.py
dbt-flink-ververica/ververica-platform-api-client/ververica_platform_api_client/api/artifacts/: delete_artifact.py  download_artifact.py  download_artifact_temporary.py  get_artifact_metadata.py  get_artifact_metadata_temporary.py  get_artifact_signature.py  get_artifact_signature_temporary.py  list_artifacts.py  save_artifact_metadata.py
dbt-flink-ververica/ververica-platform-api-client/ververica_platform_api_client/api/authorization/: change_password.py  login.py  reset_password.py  set_password.py
dbt-flink-ververica/ververica-platform-api-client/ververica_platform_api_client/models/: __init__.py  artifact_kind.py  authentication_method.py  auto_resource_setting.py  autopilot.py  azure_credentials.py  basic_resource_setting.py  basic_resource_setting_spec.py  batch_resource_setting.py  billing_item.py  billing_plan.py  billing_plans_list.py  brief_deployment_target.py  brief_deployment_target_mode.py  byte_string.py  cdc_yaml_artifact.py  cluster.py  cluster_detailed_response.py  cluster_detailed_response_status.py  cluster_list_response.py  cluster_status.py  compute_units.py  country.py  create_cluster_request.py  create_deployment_draft_body.py  create_deployment_draft_body_metadata.py  create_deployment_draft_body_spec.py  create_deployment_draft_body_spec_template.py  create_deployment_draft_body_spec_template_spec.py  create_deployment_draft_body_spec_template_spec_artifact.py  create_deployment_draft_response.py  create_deployment_draft_response_metadata.py  create_deployment_draft_response_metadata_annotations.py  create_deployment_draft_response_metadata_labels.py  create_deployment_draft_response_metadata_lock.py  create_deployment_draft_response_metadata_lock_metadata.py  create_deployment_draft_response_metadata_lock_metadata_annotations.py  create_deployment_draft_response_metadata_lock_spec.py  create_deployment_draft_response_spec.py  create_deployment_draft_response_spec_restore_strategy.py  (+222 more)
docs/: index.md  (+1 more)
(+315 files in other folders)
